<resources>
    <string name="app_name">Ecommercetest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">\t\t\tPassword</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="trade_by">Trade by</string>
    <string name="bata">\tbata</string>
    <string name="location">Location</string>
    <string name="what_are_you_looking">What are you looking for?</string>
    <string name="phone">Phones</string>
    <string name="headphones">Headphon</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash sale</string>
    <string name="default_description">Features waterproof, fire, air resistance shoes, all changed when the country of fire attacked</string>
    <string name="add_to_cart">\t\t\t\t\t\t\tAdd to cart</string>
    <string name="color">Color:</string>
    <string name="brands">Brands</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="satria_athi_pradana">Satria Athi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="you_are_added">Вы добавили товар в избранное</string>
    <string name="something_went_wrong">Something went wrong...:(</string>
    <string name="cart_fragment">Cart fragment</string>
    <string name="chat_fragment">Chat fragment</string>
    <string name="effective_mobile_test_app">Effective mobile test app</string>
    <string name="quantity">Quantity:</string>
    <string name="reviews">reviews</string>
    <string name="authed_with_Google">You\'re authed with Google</string>
    <string name="authed_with_Apple">You\'re authed with Apple</string>
    <string name="already_exist">User already exist</string>
    <string name="doesnt_exist">User doesn\'t exist</string>
    <string name="invalid_fields">Invalid fields</string>
    <string name="invalid_email">Invalid email</string>
    <string name="empty_name">Name must not be empty</string>
    <string name="empty_email">Email must not be empty</string>
</resources>