<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.LoginRegFragment">

    <TextView
        android:id="@+id/tvSignInOrLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="112dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textFontWeight="600"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etFirstName"
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_marginTop="70dp"
        app:color="@android:color/transparent"
        android:hint="@string/first_name"
        android:textColorHint="#7B7B7B"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignInOrLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInputFirstName"
            android:layout_width="290dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_edit_text_reg_log"
            android:textSize="12sp"
            android:gravity="center"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLastName"
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        app:color="@android:color/transparent"
        android:hint="@string/last_name"
        android:textColorHint="#7B7B7B"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInputLastName"
            android:layout_width="290dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_edit_text_reg_log"
            android:textSize="12sp"
            android:gravity="center"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        app:endIconMode="password_toggle"
        android:hint="@string/password"
        android:textColorHint="#7B7B7B"
        android:visibility="gone"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInputPassword"
            android:layout_width="290dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_edit_text_reg_log"
            android:textSize="12sp"
            android:gravity="center"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_marginTop="100dp"
        app:color="@android:color/transparent"
        android:hint="@string/email"
        android:textColorHint="#7B7B7B"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInputEmail"
            android:layout_width="290dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_edit_text_reg_log"
            android:textSize="12sp"
            android:gravity="center"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignInOrLogin"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="165dp"
        android:background="@drawable/bg_button_reg_log"
        android:text="@string/sign_in"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_medium"
        android:textAllCaps="false"
        android:textColor="@color/text_white"
        android:textFontWeight="700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"/>

    <LinearLayout
        android:id="@+id/llAlreadyHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btnSignInOrLogin"
        app:layout_constraintTop_toBottomOf="@id/btnSignInOrLogin"
        >

        <TextView
            android:id="@+id/tvAlreadyHave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/already_have_an_account"
            android:textSize="11sp"
            android:textFontWeight="500"
            />

        <TextView
            android:id="@+id/tvRegOrLogChanger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_light"
            android:text="Log in"
            android:textSize="11sp"
            android:textColor="#254FE6"
            android:textFontWeight="500"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnSingInWithGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llAlreadyHave">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_google"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sign_in_with_google"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textFontWeight="500"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnSingInWithApple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/btnSingInWithGoogle"
        app:layout_constraintTop_toBottomOf="@+id/btnSingInWithGoogle">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_apple"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sign_in_with_apple"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textFontWeight="500"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>