<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.ProfileFragment">

    <FrameLayout
        android:id="@+id/flTopBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_arrow_back"
            android:backgroundTint="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/profile"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="center"/>

    </FrameLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatarProfilePage"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginTop="21dp"
        android:src="@drawable/ic_dude_from_flash_item"
        app:civ_border_width="1dp"
        app:civ_border_color="#C0C0C0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flTopBar"/>

    <TextView
        android:id="@+id/tvChangePhotoProfilePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/change_photo"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_light"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAvatarProfilePage"/>

    <TextView
        android:id="@+id/tvNameProfilePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/satria_athi_pradana"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePhotoProfilePage"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUploadItem"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_button_reg_log"
        android:drawableStart="@drawable/ic_upload_item_btn"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/upload_item"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameProfilePage"/>

    <LinearLayout
        android:id="@+id/llTradeStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@+id/btnUploadItem">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_category"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_trade_store"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:text="@string/trade_store"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center|end"
            android:src="@drawable/ic_arrow_right"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPaymentMethodProfilePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@+id/llTradeStore">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_category"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_trade_store"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:text="@string/payment_method"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center|end"
            android:src="@drawable/ic_arrow_right"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBalanceProfilePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@+id/llPaymentMethodProfilePage">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_category"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_trade_store"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:text="@string/balance"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center|end"
            android:text="$1553"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTradeHistoryProfilePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@+id/llBalanceProfilePage">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_category"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_trade_store"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:text="@string/trade_history"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center|end"
            android:src="@drawable/ic_arrow_right"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRestorePurchaseProfilePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@+id/llTradeHistoryProfilePage">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_category"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_restore"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:text="@string/restore_purchase"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center|end"
            android:src="@drawable/ic_arrow_right"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llHelpProfilePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@+id/llRestorePurchaseProfilePage">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_category"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_help"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:text="@string/help"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLogOutProfilePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@+id/llHelpProfilePage">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_category"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_log_out"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:text="@string/log_out"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>